Fixed: if current user is joined to conversation the btn 'visibility' is green

--- a/src/app/requests-list/requests-list.component.scss
+++ b/src/app/requests-list/requests-list.component.scss
@@ -12,6 +12,10 @@
     margin-bottom: 0px;
 }
 
+button {
+    padding-top:2px; padding-bottom:1px; padding-right:3px; padding-left:3px;
+}
+
 /* MODAL START */
 // @media (min-width: 992px) {
 
